// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionButtons/> should render the action buttons if isEditing is set to false 1`] = `
<div>
  <span
    class="actionButtons group horizontal"
  >
    <button
      aria-disabled="false"
      class="ui-button-wrapper-a432 actionButton ui-button-fill-a432 ui-button-secondary-a432 ui-button-small-a432"
      type="button"
    >
      <span
        class="ui-button-content-a432"
      >
        I am in snapshots
      </span>
    </button>
    <button
      aria-disabled="false"
      class="ui-button-wrapper-a432 actionButton ui-button-fill-a432 ui-button-secondary-a432 ui-button-small-a432"
      type="button"
    >
      <span
        class="ui-button-content-a432"
      >
        I am in snapshots too
      </span>
    </button>
  </span>
</div>
`;

exports[`<ActionButtons/> should render the editor if isEditing is set to true  1`] = `
<ul
  class="editList"
>
  <li
    class="editRow"
  >
    <button
      aria-disabled="false"
      class="ui-button-wrapper-a432 ui-button-fill-a432 ui-button-secondary-a432 ui-button-small-a432"
      type="button"
    >
      <span
        class="ui-button-content-a432"
      >
        I am in snapshots
      </span>
    </button>
    <span
      class="customActionEditIcons"
    >
      <i
        class="material-icons"
      >
        edit
      </i>
      <i
        class="material-icons text-danger"
      >
        delete
      </i>
    </span>
  </li>
  <li
    class="editRow"
  >
    <button
      aria-disabled="false"
      class="ui-button-wrapper-a432 ui-button-fill-a432 ui-button-secondary-a432 ui-button-small-a432"
      type="button"
    >
      <span
        class="ui-button-content-a432"
      >
        I am in snapshots too
      </span>
    </button>
    <span
      class="customActionEditIcons"
    >
      <i
        class="material-icons"
      >
        edit
      </i>
      <i
        class="material-icons text-danger"
      >
        delete
      </i>
    </span>
  </li>
</ul>
`;
